--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,8 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/2.7.4/d3.layout.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.4.6/rickshaw.min.js"></script>
 
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
+
 	<link rel="stylesheet" href="/static/css/temperature.css">
 </head>
 <body>
