--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,43 +4,39 @@
 	<title>home temperature</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.4.6/rickshaw.min.css">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/2.7.4/d3.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/2.7.4/d3.layout.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.4.6/rickshaw.min.js"></script>
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/rickshaw/1.4.6/rickshaw.min.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/2.7.4/d3.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/2.7.4/d3.layout.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/rickshaw/1.4.6/rickshaw.min.js"></script>
 
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
 
 	<link rel="stylesheet" href="/static/css/temperature.css">
 </head>
 <body>
 
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<header class="navbar navbar-inverse navbar-fixed-top" role="banner">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".bs-navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Temperature</a>
+				<a class="navbar-brand" href="/"><strong>Temperature</strong></a>
 			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
+			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+				<ul class="nav navbar-nav">
 					<li><a href="#about">About</a></li>
 				</ul>
-			</div><!-- /.nav-collapse -->
+			</nav><!-- /.nav-collapse -->
 		</div>
-	</div>
+	</header>
 
 	<div class="container">
-
-		<ol class="breadcrumb">
-			{% block breadcrumb %}{% endblock %}
-		</ol>
+		{% block breadcrumb %}{% endblock %}
 
 		<div class="page-header">
 			{% block title %}{% endblock %}
@@ -49,21 +45,11 @@
 		<div class="row">
 			<div class="col-md-12">
 				{% block content %}{% endblock %}
-
-				<ul class="pager">
-					{% if samples.previous %}
-					<li class="previous"><a href="{{ samples.previous.url }}">&larr; Older</a></li>
-					{% else %}
-					<li class="previous disabled"><a href="#">&larr; Older</a></li>
-					{% endif %}
-					{% if samples.next %}
-					<li class="next"><a href="{{ samples.next.url }}">Newer &rarr;</a></li>
-					{% else %}
-					<li class="next disabled"><a href="#">Newer &rarr;</a></li>
-					{% endif %}
-				</ul>
 			</div>
 		</div>
 	</div> <!-- /.container -->
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 </html>
